@@ -38,6 +38,7 @@ int _IO_putc(char,file);
 string setlocale(int, string);
 
 ; pwd.h
+string getpass(string);
 void endpwent(void);
 addr getpwnam(string);
 
@@ -51,6 +52,7 @@ int kill(int,int);
 int fclose(file);
 int ferror(file);
 int fflush(file);
+char fgetc(file);
 addr fgets(+string, uint, file);
 int fileno(file);
 int fprintf(file,format);
@@ -99,6 +101,11 @@ int uname(addr);
 ; sys/vfs.h
 int statfs(string,addr);
 
+; syslog.h
+void closelog(void);
+void openlog(string,int,int);
+void syslog(int,format);
+
 ; term.h
 int tputs(string, int, addr);
 
@@ -108,20 +115,29 @@ int time(addr);
 ; unistd.h
 int chown(string,int,int);
 int close(int);
+string crypt(string,addr);
 int execlp(string,string,addr,addr,addr);
 int fork(void);
 string2 getcwd(addr,uint);
 int geteuid(void);
+int getegid(void);
+int getgid(void);
 int gethostname(+string2,int);
+string getlogin(void);
 int getpid(void);
+int getuid(void);
 int isatty(int);
 int mkdir(string,octal);
 int read(int, +string0, uint);
 int rmdir(string);
+int setgid(int);
 int sethostname(+string2,int);
+int setpgid(int,int);
+int setuid(int);
 uint sleep(uint);
 int symlink(string,string);
 int sync(void);
+string ttyname(int);
 int write(int, string3, uint);
 
 ; SYSCALLS
