@@ -9,6 +9,7 @@ extern int opt_L;	/* display library calls */
 extern int opt_S;	/* display system calls */
 extern int opt_f;	/* trace child processes */
 extern char * opt_u;	/* username to run command as */
+extern int opt_t;	/* print absolute timestamp */
 
 struct opt_p_t {
 	pid_t pid;
