@@ -5,12 +5,20 @@
 
 #include "ltrace.h"
 
+#if (!defined(PTRACE_PEEKUSER) && defined(PTRACE_PEEKUSR))
+# define PTRACE_PEEKUSER PTRACE_PEEKUSR
+#endif
+
+#if (!defined(PTRACE_POKEUSER) && defined(PTRACE_POKEUSR))
+# define PTRACE_POKEUSER PTRACE_POKEUSR
+#endif
+
 /* Returns 1 if syscall, 2 if sysret, 0 otherwise.
  */
 int syscall_p(struct process * proc, int status, int * sysnum)
 {
 	if (WIFSTOPPED(status) && WSTOPSIG(status)==SIGTRAP) {
-		*sysnum = ptrace(PTRACE_PEEKUSER, proc->pid, 4*ORIG_EAX);
+		*sysnum = ptrace(PTRACE_PEEKUSER, proc->pid, 4*ORIG_EAX, 0);
 		if (*sysnum>=0) {
 			if (proc->current_syscall!=*sysnum) {
 				return 1;
@@ -37,25 +45,25 @@ void continue_after_breakpoint(struct process *proc, struct breakpoint * sbp, in
 long gimme_arg(enum tof type, struct process * proc, int arg_num)
 {
 	if (arg_num==-1) {		/* return value */
-		return ptrace(PTRACE_PEEKUSER, proc->pid, 4*EAX);
+		return ptrace(PTRACE_PEEKUSER, proc->pid, 4*EAX, 0);
 	}
 
 	if (type==LT_TOF_FUNCTION) {
-		return ptrace(PTRACE_PEEKTEXT, proc->pid, proc->stack_pointer+4*(arg_num+1));
+		return ptrace(PTRACE_PEEKTEXT, proc->pid, proc->stack_pointer+4*(arg_num+1), 0);
 	} else if (type==LT_TOF_SYSCALL) {
 #if 0
 		switch(arg_num) {
-			case 0:	return ptrace(PTRACE_PEEKUSER, proc->pid, 4*EBX);
-			case 1:	return ptrace(PTRACE_PEEKUSER, proc->pid, 4*ECX);
-			case 2:	return ptrace(PTRACE_PEEKUSER, proc->pid, 4*EDX);
-			case 3:	return ptrace(PTRACE_PEEKUSER, proc->pid, 4*ESI);
-			case 4:	return ptrace(PTRACE_PEEKUSER, proc->pid, 4*EDI);
+			case 0:	return ptrace(PTRACE_PEEKUSER, proc->pid, 4*EBX, 0);
+			case 1:	return ptrace(PTRACE_PEEKUSER, proc->pid, 4*ECX, 0);
+			case 2:	return ptrace(PTRACE_PEEKUSER, proc->pid, 4*EDX, 0);
+			case 3:	return ptrace(PTRACE_PEEKUSER, proc->pid, 4*ESI, 0);
+			case 4:	return ptrace(PTRACE_PEEKUSER, proc->pid, 4*EDI, 0);
 			default:
 				fprintf(stderr, "gimme_arg called with wrong arguments\n");
 				exit(2);
 		}
 #else
-		return ptrace(PTRACE_PEEKUSER, proc->pid, 4*arg_num);
+		return ptrace(PTRACE_PEEKUSER, proc->pid, 4*arg_num, 0);
 #endif
 	} else {
 		fprintf(stderr, "gimme_arg called with wrong arguments\n");
